--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "vite preview" 
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -42,7 +43,6 @@
     "react-toastify": "^10.0.6",
     "supabase": "^1.223.10",
     "uuid": "^11.0.2",
-    "vite-plugin-node-polyfills": "^0.22.0",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
