--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",  // For production - starts the server
+    "dev": "nodemon index.js",  // For development - automatically restarts server on file changes
+    "build": "echo \"No build step defined\" && exit 0"  // Placeholder for build step (you can change this if you need to build, e.g., for TypeScript)
   },
   "keywords": [],
   "author": "",
@@ -19,6 +22,7 @@
     "express": "^4.21.1",
     "sharp": "^0.33.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.20"  // Add nodemon as a dev dependency for hot-reloading during development
   }
 }
