--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",  // For production - starts the server
-    "dev": "nodemon index.js",  // For development - automatically restarts server on file changes
-    "build": "echo \"No build step defined\" && exit 0"  // Placeholder for build step (you can change this if you need to build, e.g., for TypeScript)
+    "start": "node index.js", 
+    "dev": "nodemon index.js",  
+    "build": "echo \"No build step defined\" && exit 0" 
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,6 @@
     "sharp": "^0.33.5",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20"  // Add nodemon as a dev dependency for hot-reloading during development
+    "nodemon": "^2.0.20"  
   }
 }
