--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",  
+  "main": "index.js",  
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js",  
-    "dev": "nodemon server/index.js", 
+    "start": "node index.js",  
+    "dev": "nodemon index.js", 
     "build": "echo \"No build step defined\" && exit 0"
   },
   "keywords": [],
